--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "lodash": "^4.17.15",
     "vue": "^2.6.10"
   },
   "devDependencies": {
